2013-11-12  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module_factory.cc: Fixed a bug when a macro has
	  no value.

2013-09-16  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module_inventory.cc: Do not output anything if the
	  module has no data.

2013-08-08  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module_logevent.h: Updated the EventID mask. The
	  Windows Event Log Viewer seems to ignore the most significant 16
	  bits of the event id.

	* modules/pandora_module_logevent.cc: Do not discard existing
	  events when running in debug mode.

2013-06-26 Miguel de Dios <miguel.dedios@artica.es>

	* bin/pandora_agent.conf: restored the remote_config as disabled
	for to avoid problems.

2013-06-25  Sancho Lerena <slerena@artica.es>

        * bin/pandora_agent.conf: removed old references to ODBC feature
        not supported anymore. New defaults (inventory, remote config and
        IP detection now by default).


2013-06-25  Ramon Novoa  <rnovoa@artica.es>

	* windows/pandora_wmi.cc: When concatenating IP addresses, do not
	  output a comma unless the IP can be parsed.

2013-06-20  Ramon Novoa  <rnovoa@artica.es>

	* windows/winevt.h: Added to repository. Headers for Wevtapi.dll.

	* modules/pandora_module_logevent.cc,
	  modules/pandora_module_logevent.h,
	  pandora_strutils.cc,
	  pandora_strutils.h: Added support for the new XML based eventing model
	  introduced in Windows Vista.

2013-06-14  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module_logevent.h,
	  modules/pandora_module_logevent.cc: Merged from 4.0 branch. Improved
	  the reading of log event descriptions.

2013-04-17  Ramon Novoa  <rnovoa@artica.es>

	* windows/pandora_wmi.cc: Fixed a bug when concatenating multiple ip
	  addresses.

2013-04-12  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module_factory.cc: Added macro support to all
	  configuration tokens.

2013-04-12  Hirofumi Kosaka <kosaka@rworks.jp>
